--- a/osa6/redux-anecdotes-v2/package.json
+++ b/osa6/redux-anecdotes-v2/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "json-server": "^0.14.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
@@ -12,6 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "json-server -p3001 db.json",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
